Omit test files from scan
Upcoming rule `subscriptions-only-during-initialization`
will flag a lot of issues in test files

Signed-off-by: michael sorens <msorens@chef.io>

--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -69,6 +69,7 @@ steps:
           entrypoint: semgrep
           command: [
             "--error",
+            "--exclude", "*.spec.ts",
             "--config", "/go/src/github.com/chef/automate/semgrep",
             "/go/src/github.com/chef/automate"
           ]
