new rule: onDestroy-not-implemented-in-class
With this issue just resolved --
https://github.com/returntocorp/semgrep/issues/1850 --
I can now add this new rule.

Signed-off-by: michael sorens <msorens@chef.io>

--- a/semgrep/rxjs-subscription.yaml
+++ b/semgrep/rxjs-subscription.yaml
@@ -116,3 +116,11 @@ rules:
     message: ngOnDestroy missing this.isDestroyed.complete()
     languages: [ts]
     severity: ERROR
+
+  - id: onDestroy-not-implemented-in-class
+    patterns:
+    - pattern: this.isDestroyed.complete()
+    - pattern-not-inside: class $CLASS implements OnDestroy { ... }
+    message: subscriptions never complete because class does not implement OnDestroy Lifecycle hook
+    languages: [ts]
+    severity: ERROR
