new rule: subscriptions-only-during-initialization
Signed-off-by: michael sorens <msorens@chef.io>

--- a/semgrep/rxjs-syntax.yaml
+++ b/semgrep/rxjs-syntax.yaml
@@ -32,3 +32,60 @@ rules:
       Observable variable should end with a dollar sign.
     languages: [ts]
     severity: ERROR
+
+  # TODO: waiting for https://github.com/returntocorp/semgrep/issues/1861 -- likely in release 0.29.0
+  # - id: subscriptions-only-during-initialization
+  #   patterns:
+  #   - pattern: |
+  #       $EXPR.subscribe(...);
+  #   - pattern-not-inside: |
+  #       class $CLASS {
+  #         ...
+  #         constructor(...) {
+  #           ...
+  #           $EXPR.subscribe(...);
+  #           ...
+  #         }
+  #         ...
+  #       }
+  #   - pattern-not-inside: |
+  #       class $CLASS {
+  #         ...
+  #         ngOnInit() {
+  #           ...
+  #           $EXPR.subscribe(...);
+  #           ...
+  #         }
+  #         ...
+  #       }
+  #   - pattern-not-inside: |
+  #       class $CLASS {
+  #         ...
+  #         ngAfterContentInit() {
+  #           ...
+  #           $EXPR.subscribe(...);
+  #           ...
+  #         }
+  #         ...
+  #       }
+  #   - pattern-not-inside: |
+  #       class $CLASS {
+  #         ...
+  #         ngOnInit() {
+  #           ...
+  #           this.$FUNC(...);
+  #           ...
+  #         }
+  #         ...
+  #         $FUNC(...) {
+  #           ...
+  #           $EXPR.subscribe(...);
+  #           ...
+  #         }
+  #         ...
+  #       }
+  #   - pattern-not-inside: |
+  #       $SUB_EXPR.pipe(first()).subscribe(...);
+  #   message: subscribe() should only be in ngOnInit or constructor
+  #   languages: [ts]
+  #   severity: ERROR
